# lethetic

./: .gitignore  .last_context  .requests  .responses  Cargo.toml  README.md  config.yml  dump_prompt.rs  increment_and_publishrelease.sh  llm.md  parse_xml.rs  setup_gemma4_server.sh  setup_qwen3_server.sh  test_parse2.rs  todo_tools.md  version.txt
.github/workflows/: release.yml
.lethetic/: last-response  last_context  requests  responses  responses.jsonl
bob/quickprompt_project/: Cargo.toml
bob/quickprompt_project/src/: main.rs
frank/spinning_cube/: Program.cs
gemma-chat/: Cargo.toml
gemma-chat/src/: client.rs  lib.rs  sse.rs  stream.rs  types.rs
gemma-chat/tests/: live.rs
ignore/spinning_cube/: Cargo.toml
ignore/spinning_cube/src/: main.rs
src/: app.rs  client.rs  config.rs  context.rs  headless.rs  icons.rs  lib.rs  llm_tokens.rs  loop_detector.rs  main.rs  markdown.rs  parser.rs  parser_new.rs  system_prompt.rs  tool_executor.rs  tools.rs  ui.rs
src/lsp/: mod.rs  registry.rs
src/tools/: apply_patch.rs  ask_the_user.rs  calculate.rs  code_snippet.rs  edit.rs  fetch_url.rs  find_symbol.rs  get_pdf_text.rs  glob.rs  lsp.rs  mod.rs  process_image.rs  process_pdf_image.rs  read_file.rs  read_file_lines.rs  read_folder.rs  read_page.rs  replace_text.rs  repo_overview.rs  run_shell_command.rs  search_text.rs  summarize_content.rs  task.rs  todowrite.rs  web_fetch.rs  web_search.rs  write_file.rs
tests/: repro_crash.rs  test_apply_patch_integration.rs  test_client_stream.rs  test_context_integration.rs  test_extended_coverage_integration.rs  test_gemma_parse.rs  test_hello_integration.rs  test_lines.rs  test_live_parser_integration.rs  test_live_patch_read_integration.rs  test_loop_detector.rs  test_markdown_rendering.rs  test_md.rs  test_parse.rs  test_parse3.rs  test_parse4.rs  test_parser_new.rs  test_read_file_feedback.rs  test_regex.rs  test_server_error.rs  test_system_prompt_manager.rs  test_vision_pdf_integration.rs  test_winnow.rs  test_write_file_integration.rs  validate_parser_test.rs
tests/common/: mod.rs
tests/integration/: test_live_auto_summarize.rs  test_live_client_stream.rs  test_live_extended_coverage.rs  test_live_hello.rs  test_live_native_tool_format.rs  test_live_parser.rs  test_live_patch.rs  test_live_prompt_write_cs.rs  test_live_qwen3.rs
wayland_cube/: compile_cube.sh  cube.c
