[package]
name = "lethetic"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.32"
futures-util = "0.3.32"
once_cell = "1.21.4"
pulldown-cmark = "0.13.3"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
syntect = "5.3.0"
sysinfo = "0.38.4"
tiktoken-rs = "0.11.0"
tokio = { version = "1.52.1", features = ["full"] }
tokio-util = "0.7.18"

[[bin]]
name = "simulation"
path = "src/bin/simulation.rs"

