[workspace]
members = [".", "gemma-chat"]

[package]
name = "lethetic"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.32"
futures-util = "0.3.32"
once_cell = "1.21.4"
pulldown-cmark = "0.13.3"
ratatui = "0.30.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
syntect = "5.3.0"
sysinfo = "0.38.4"
winnow = "0.7.15"
dirs = "5.0.1"
tokio = { version = "1.52.1", features = ["full"] }
tokio-util = "0.7.18"
pdf_oxide = { version = "0.3", features = ["rendering"] }
image = "0.25"
base64 = "0.22"
diffy = "0.4"
h2m = "0.7.1"
h2m-search = "0.7.1"
gemma-chat = { path = "gemma-chat" }
meval = "0.2.0"

[[bin]]
name = "lethetic"
path = "src/main.rs"

[[bin]]
name = "eval_scenarios"
path = "src/bin/eval_scenarios.rs"

[[bin]]
name = "playback"
path = "src/bin/playback.rs"

[[test]]
name = "test_live_extended_coverage"
path = "tests/integration/test_live_extended_coverage.rs"

[[test]]
name = "test_live_parser"
path = "tests/integration/test_live_parser.rs"

[[test]]
name = "test_live_patch"
path = "tests/integration/test_live_patch.rs"

[[test]]
name = "test_live_auto_summarize"
path = "tests/integration/test_live_auto_summarize.rs"

[[test]]
name = "test_live_client_stream"
path = "tests/integration/test_live_client_stream.rs"

[[test]]
name = "test_live_hello"
path = "tests/integration/test_live_hello.rs"

[[test]]
name = "test_live_prompt_write_cs"
path = "tests/integration/test_live_prompt_write_cs.rs"

[[test]]
name = "test_live_qwen3"
path = "tests/integration/test_live_qwen3.rs"

[dev-dependencies]
tempfile = "3.10.1"
serial_test = "3.2"
