[package]
name = "gemma-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
